@@ -1,24 +1,29 @@
 package com.navercorp.scavenger.javaagent.scheduling;
 
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.atMostOnce;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Properties;
 
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-
-import lombok.SneakyThrows;
 
 import com.navercorp.scavenger.javaagent.collecting.CodeBaseScanner;
 import com.navercorp.scavenger.javaagent.collecting.InvocationRegistry;
-import com.navercorp.scavenger.javaagent.collecting.InvocationTracker;
 import com.navercorp.scavenger.javaagent.model.CodeBase;
 import com.navercorp.scavenger.javaagent.model.Config;
 import com.navercorp.scavenger.javaagent.model.Method;
@@ -26,7 +31,9 @@ import com.navercorp.scavenger.javaagent.publishing.Publisher;
 import com.navercorp.scavenger.model.CommonPublicationData;
 import com.navercorp.scavenger.model.GetConfigResponse;
 import com.navercorp.scavenger.model.InvocationDataPublication;
+import org.mockito.junit.jupiter.MockitoExtension;
 
+@ExtendWith(MockitoExtension.class)
 @Nested
 @DisplayName("Scheduler class")
 public class SchedulerTest {
@@ -62,35 +69,31 @@ public class SchedulerTest {
         .build();
 
     @Mock
-    private Publisher publisher;
+    private InvocationRegistry invocationRegistry;
 
-    private AutoCloseable autoCloseable;
+    @Mock
+    private Publisher publisher;
 
     @Mock
     private CodeBaseScanner codeBaseScannerMock;
 
-    @SuppressWarnings("SameParameterValue")
-    private InvocationDataPublication.InvocationDataEntry newInvocationDataEntry(String hash) {
-        return InvocationDataPublication.InvocationDataEntry.newBuilder()
-            .setHash(hash)
-            .build();
-    }
-
-    @SneakyThrows
     @BeforeEach
-    public void setUp() {
-        autoCloseable = MockitoAnnotations.openMocks(this);
-        when(codeBaseScannerMock.scan())
-            .thenReturn(
-                new CodeBase(Collections.singletonList(Method.createTestMethod()), "fingerprint")
-            );
-
-        sut = new Scheduler(new Config(new Properties()), publisher, codeBaseScannerMock);
+    public void setUp() throws Exception {
+        lenient().when(codeBaseScannerMock.scan())
+            .thenReturn(new CodeBase(List.of(Method.createTestMethod()), "fingerprint"));
+        sut = new Scheduler(invocationRegistry, new Config(new Properties()), publisher, codeBaseScannerMock);
     }
 
-    @AfterEach
-    public void tearDown() throws Exception {
-        autoCloseable.close();
+    private void mockInvocationRegistered() {
+        when(invocationRegistry.getPublication(any(), anyString()))
+            .thenReturn(
+                InvocationDataPublication.newBuilder()
+                    .setCommonData(sampleCommonData)
+                    .addEntry(InvocationDataPublication.InvocationDataEntry.newBuilder()
+                        .setHash("hash")
+                        .build())
+                    .build()
+            );
     }
 
     @Nested
@@ -104,7 +107,7 @@ public class SchedulerTest {
             @BeforeEach
             public void setUpAndRun() {
                 when(publisher.pollDynamicConfig()).thenReturn(configResponse);
-                InvocationTracker.getInvocationRegistry().register("hash");
+                mockInvocationRegistered();
 
                 sut.run();
             }
@@ -133,7 +136,7 @@ public class SchedulerTest {
         class NoInvocationTest {
 
             @BeforeEach
-            public void setUpAndRun() throws IOException {
+            public void setUpAndRun() {
                 when(publisher.pollDynamicConfig()).thenReturn(configResponse);
                 sut.run();
             }
@@ -213,17 +216,13 @@ public class SchedulerTest {
         @Nested
         @DisplayName("if invocation publish failed")
         class InvocationPublishTest {
-            InvocationRegistry registry;
 
             @BeforeEach
             public void setUpAndRunThreeTimes() throws IOException {
-                registry = spy(InvocationRegistry.class);
-
                 when(publisher.pollDynamicConfig())
                     .thenReturn(configResponse);
 
-                InvocationTracker.setInvocationRegistry(registry);
-                registry.register("hash");
+                mockInvocationRegistered();
 
                 doThrow(new RuntimeException())
                     .when(publisher)
@@ -238,7 +237,7 @@ public class SchedulerTest {
             @Test
             @DisplayName("it runs getPublication only once")
             void getOnce() {
-                verify(registry, atMostOnce()).getPublication(any(), anyString());
+                verify(invocationRegistry, atMostOnce()).getPublication(any(), anyString());
             }
 
             @Test
@@ -275,17 +274,8 @@ public class SchedulerTest {
 
             @BeforeEach
             public void runsAndShutdown() throws IOException {
-                InvocationRegistry registry = mock(InvocationRegistry.class);
-                InvocationTracker.setInvocationRegistry(registry);
-
+                mockInvocationRegistered();
                 when(publisher.pollDynamicConfig()).thenReturn(configResponse);
-                when(registry.getPublication(any(), anyString()))
-                    .thenReturn(
-                        InvocationDataPublication.newBuilder()
-                            .setCommonData(sampleCommonData)
-                            .addEntry(newInvocationDataEntry("hash"))
-                            .build()
-                    );
 
                 sut.run();
                 sut.shutdown();
